welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:5: error: ')' expected but 'if' found.
	if (((Math.max(a,b))%(Math.min(a,b))==2) {
        ^lastDigit:8: error: ')' expected but 'return' found.
	return false;
        ^